# DFHack-Legacy

./: .gitignore  CMakeLists.txt  README.md  TODO.conf
depends/: CMakeLists.txt
depends/common/: CMakeLists.txt  bvector12.h  common.cpp  common.h  custom_hash.h  deque20.h  deque20_utility.h  set8.h  string24.h  vector12.h
depends/lua/include/: luaconf.h
depends/md5/: md5.h  md5wrapper.cpp  md5wrapper.h
depends/tthread/: tinythread.h
plugins/: 3dveins.cpp  Brushes.h  CMakeLists.txt  add-spatter.cpp  autochop.cpp  autoclothing.cpp  autodump.cpp  autofarm.cpp  autogems.cpp  autohauler.cpp  autolabor.cpp  automaterial.cpp  automelt.cpp  autotrade.cpp  blueprint.cpp  building-hacks.cpp  buildingplan-lib.cpp  buildingplan-lib.h  buildingplan.cpp  burrows.cpp  changeitem.cpp  changelayer.cpp  changevein.cpp  cleanconst.cpp  cleaners.cpp  cleanowned.cpp  command-prompt.cpp  confirm.cpp  createitem.cpp  cursecheck.cpp  cxxrandom.cpp  debug.cpp  deramp.cpp  dig.cpp  digFlood.cpp  dwarfmonitor.cpp  dwarfvet.cpp  embark-tools.cpp  eventful.cpp  fastdwarf.cpp  (+54 more)
plugins/devel/: CMakeLists.txt  buildprobe.cpp  color-dfhack-text.cpp  counters.cpp  dumpmats.cpp  eventExample.cpp  frozen.cpp  kittens.cpp  memutils.cpp  memview.cpp  notes.cpp  onceExample.cpp  renderer-msg.cpp  rprobe.cpp  stepBetween.cpp  stockcheck.cpp  stripcaged.cpp  tilesieve.cpp  zoom.cpp
plugins/devel/check-structures-sanity/: CMakeLists.txt  check-structures-sanity.h  dispatch.cpp  main.cpp  types.cpp  validate.cpp
plugins/diggingInvaders/: CMakeLists.txt  assignJob.cpp  assignJob.h  diggingInvaders.cpp  edgeCost.cpp  edgeCost.h
plugins/embark-assistant/: CMakeLists.txt  defs.h  embark-assistant.cpp  finder_ui.cpp  help_ui.cpp  matcher.cpp  overlay.cpp  screen.cpp  screen.h  survey.cpp
plugins/labormanager/: CMakeLists.txt  joblabormapper.cpp  labormanager.cpp
plugins/lua/: cxxrandom.lua
plugins/remotefortressreader/: adventure_control.cpp  building_reader.cpp  building_reader.h  dwarf_control.cpp  item_reader.cpp  item_reader.h  remotefortressreader.cpp
plugins/rendermax/: renderer_light.cpp  renderer_light.hpp  renderer_opengl.hpp  rendermax.cpp
plugins/ruby/: ruby.cpp
plugins/stockpiles/: CMakeLists.txt  OrganicMatLookup.cpp  OrganicMatLookup.h  StockpileSerializer.cpp  StockpileSerializer.h  StockpileUtils.h  stockpiles.cpp
plugins/tweak/: CMakeLists.txt  tweak.cpp
plugins/tweak/tweaks/: advmode-contained.h  block-labors.h  burrow-name-cancel.h  cage-butcher.h  condition-material.h  do-job-now.h  eggs-fertile.h  embark-profile-name.h  farm-plot-select.h  fast-heat.h  fast-trade.h  hide-priority.h  hotkey-clear.h  import-priority-category.h  kitchen-prefs-all.h  kitchen-prefs-color.h  max-wheelbarrow.h  military-assign.h  pausing-fps-counter.h  reaction-gloves.h  shift-8-scroll.h  stable-cursor.h  stone-status-all.h  title-start-rename.h  tradereq-pet-gender.h
